[package]
name = "tmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
crossterm = "0.26.1"
#crossterm = { version = "0.26.1",  default-features = false, features = ["serde", "styling","styling"] }
