[package]
name = "tmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
crossterm = "0.26.1"
#crossterm = { version = "0.26.1",  default-features = false, features = ["serde", "styling","styling"] }
[profile.release]
opt-level='z'
lto=true
codegen-units=1
strip=true
panic='abort'
